samples/_failures_safe/1761731375_bdd4cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_580fd61c.c: In function ‘main’:
./samples/SAFE/__tmp_580fd61c.c:162:15: error: expected ‘;’ at end of input
  162 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_580fd61c.c:162:9: error: expected declaration or statement at end of input
  162 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_580fd61c.c:162:9: error: expected declaration or statement at end of input
